--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,7 +5,7 @@
   excerpt: Liste et contact des commissions existantes
   image:
 
-- title: Revue de presse
-  url: /revue-de-presse/
-  excerpt: "Liens et articles traitant de Nuit Debout Epinal"
+- title: Foire aux questions
+  url: /faq/
+  excerpt: "Tout ce que vous avez toujours voulu savoir sur Nuit Debout Epinal sans oser le demander !"
   image:
