--- a/_prose.yml
+++ b/_prose.yml
@@ -1,5 +1,5 @@
 prose:
-  rooturl: '_posts'
+  # rooturl: '_posts'
   siteurl: 'http://www.nuitdeboutepinal.fr/'
   # relativeLinks: 'http://prose.github.io/starter/links.jsonp'
   media: 'images'
@@ -8,6 +8,7 @@ prose:
     - _config.yml
     - /_layouts
     - /_includes
+    - /_sass
   metadata:
     _posts:
       - name: "layout"
@@ -17,27 +18,98 @@ prose:
       - name: "title"
         field:
           element: "text"
-          label: "title"
-      - name: "tags"
+          label: "Titre"
+      - name: "date"
         field:
-          element: "multiselect"
-          label: "Add Tags"
-          placeholder: "Choose Tags"
-          options:
-            - name: "Animation"
-              value: "animation"
-            - name: "Action"
-              value: "action"
+          element: "text"
+          label: "Date de publication"
+          value: CURRENT_DATETIME
       - name: "categories"
         field:
           element: "select"
-          label: "Ctegorie"
+          label: "Catégorie"
           placeholder: "Choisissez une categorie"
           options:
             - name: "Animation"
               value: "animation"
             - name: "Action"
               value: "action"
+            - name: "Antipub"
+              value: "antipub"
+            - name: "Cuisine"
+              value: "cuisine"
+            - name: "Documentation"
+              value: "documentation"
+            - name: "Entrepreneuriat Social"
+              value: "entrepreneuriatsocial"
+            - name: "Environnement"
+              value: "environnement"
+            - name: "Jardin"
+              value: "jardin"
+            - name: "Logistique"
+              value: "logistique"
+            - name: "Media"
+              value: "media"
+            - name: "Projection"
+              value: "projection"
+            - name: "Projet de société"
+              value: "projetdesociete"
+     _commissions:
+      - name: "layout"
+        field:
+          element: "hidden"
+          value: "commission"
+      - name: "symbol"
+        field:
+          element: "select"
+          label: "Mot clé"
+          placeholder: "Choisissez le mot-clé"
+          options:
+            - name: "Animation"
+              value: "animation"
+            - name: "Action"
+              value: "action"
+            - name: "Antipub"
+              value: "antipub"
+            - name: "Cuisine"
+              value: "cuisine"
+            - name: "Documentation"
+              value: "documentation"
+            - name: "Entrepreneuriat Social"
+              value: "entrepreneuriatsocial"
+            - name: "Environnement"
+              value: "environnement"
+            - name: "Jardin"
+              value: "jardin"
+            - name: "Logistique"
+              value: "logistique"
+            - name: "Media"
+              value: "media"
+            - name: "Projection"
+              value: "projection"
+            - name: "Projet de société"
+              value: "projetdesociete"
+    _faqs:
+      - name: "layout"
+        field:
+          element: "hidden"
+          value: "faq"
+      - name: "position"
+        field:
+          element: "number"
+          help: "Détermine l'ordre d'affichage de la question sur la page (comparer aux positions des autres questions !)"
+          type: number
+      - name: "title"
+        field:
+          element: "text"
+          label: "title"
+      - name: "published"
+        field:
+          element: "button"
+          label: "Statut"
+          help: "Si publié, la question est visible"
+          on: "Publié"
+          off: "Caché"
     _posts/static:
       - name: "layout"
         field:
