#14 test config prose.io

--- a/_config.yml
+++ b/_config.yml
@@ -56,12 +56,7 @@ collections:
 prose:
   siteurl: 'http://www.nuitdeboutepinal.fr/'
   media: 'images'
-  ignore:
-    - atom.xml
-    - _config.yml
-    - /_includes
-    - /_pages
-    - /_layouts
+  ignore: [ "/_includes", "/_layouts", "/_sass", "/css", "atom.xml", "_config.yml"]
   metadata:
     _posts:
       - name: "layout"
