#14 test config prose.io

--- a/_prose.yml
+++ b/_prose.yml
@@ -47,3 +47,7 @@ prose:
             - name: "Communication"
               value: "communication"
           alterable: true
+      - name: "date"
+        field:
+          element: "text"
+          value: "CURRENT_DATETIME"
