#14 test config prose.io

--- a/_prose.yml
+++ b/_prose.yml
@@ -50,4 +50,40 @@ prose:
       - name: "date"
         field:
           element: "text"
+          label: "Date de publication"
           value: "CURRENT_DATETIME"
+    _commissions:
+      - name: "layout"
+        field:
+          element: "hidden"
+          value: "commission"
+      - name: "symbol"
+        field:
+          element: "select"
+          label: "Mot clé"
+          placeholder: "Choisissez le mot-clé"
+          options:
+            - name: "Animation"
+              value: "animation"
+            - name: "Action"
+              value: "action"
+            - name: "Antipub"
+              value: "antipub"
+            - name: "Cuisine"
+              value: "cuisine"
+            - name: "Documentation"
+              value: "documentation"
+            - name: "Entrepreneuriat Social"
+              value: "entrepreneuriatsocial"
+            - name: "Environnement"
+              value: "environnement"
+            - name: "Jardin"
+              value: "jardin"
+            - name: "Logistique"
+              value: "logistique"
+            - name: "Media"
+              value: "media"
+            - name: "Projection"
+              value: "projection"
+            - name: "Projet de société"
+              value: "projetdesociete"
