adding casseroles + txt fanny + credits photos

--- a/_data/convergence.yml
+++ b/_data/convergence.yml
@@ -31,11 +31,23 @@
   location : Darnieulles
   link_url : http://epinal-en-transition.fr/agenda/atelier-autoconstruction-11/
 
+- title : Fete de la paix
+  organizer: Horizons Solidaires
+  date : 2016-06-26
+  location : Colline de Sion
+  link_url : http://horizons-solidaires.weebly.com/fecircte-de-la-paix-2016.html
+
 - title:  Le jugement du procès d'Antoine Deltour
   date: 2016-06-29 15 h
   organizer : Jean-Luc Tonnerieux
   location : "Luxembourg (départ d'Epinal, car, Luxembourg et retour)"
   link_url : https://revesvosges.wordpress.com/agenda/
+
+- title:  Projection "En quête de sens"
+  date: 2016-06-30
+  organizer : Café Gai Luron
+  location : "Café Gai Luron, Saulxures sur Moselotte"
+  link_url : http://cafeculturel.wix.com/legailuron#!agenda-1/tosim
 
 
 - title: Fête de la transition
