--- a/_data/revue-presse.yml
+++ b/_data/revue-presse.yml
@@ -1,5 +1,10 @@
 # Liens vers les articles qui parlent de nuit debout epinal
 
+- title: "Vosges : un premier concert de Casseroles Debout à Epinal"
+  url: http://www.vosgesmatin.fr/edition-d-epinal/2016/06/18/vosges-un-premier-concert-de-casseroles-debout-a-epinal
+  media: Vosges Matin
+  date: 2016-06-18 15:35:44 +0200
+
 - title: "Vosges : une Nuit debout programmée à Epinal s'attaque au nucléaire"
   url: http://www.vosgesmatin.fr/edition-d-epinal/2016/05/22/vosges-une-nuit-debout-programmee-a-epinal-s-attaque-au-nucleaire
   media: Vosges Matin
